deployments/nginx-test/deployment.yaml
# Deploy Nginx pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: test
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
      name: hello
      namespace: test
    spec:
      containers:
        - name: hello
          image: nginx
          ports:
            - name: http
              containerPort: 80
      # Schedule workloads across both fast and slow node labels
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: disk
                operator: In
                values:
                - fast
                - slow
